# LED_SINEWAVE

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
cmake/: gcc-arm-none-eabi.cmake
platform/startup/: startup_stm32f446retx.s
platform/svd/: Cortex-M4.svd
src/app/: CMakeLists.txt
src/app/led_effect/: led_effect.c  led_effect.h  lut_cfg.c  lut_cfg.h
src/app/main/: main.c  main_intr.c  main_task.c  main_task.h
src/bsw/: CMakeLists.txt
src/bsw/dma/: dma_types.h
src/bsw/interrupt/: interrupt.c  interrupt.h  interrupt_cfg.c  interrupt_cfg.h  interrupt_types.h
src/bsw/mcu/: mcu.c  mcu.h  mcu_cfg.c  mcu_cfg.h  mcu_types.h
src/bsw/port/: port.c  port.h  port_cfg.c  port_cfg.h  port_types.h
src/bsw/pwm/: pwm.c  pwm.h  pwm_cfg.c  pwm_cfg.h  pwm_types.h
src/bsw/stm32_hal/Inc/: stm32f4xx_hal_conf.h
src/bsw/utilities/: gen.py  utilities.c  utilities.h
